--- a/postgres/.env.postgres
+++ b/postgres/.env.postgres
@@ -1,5 +1,5 @@
 POSTGRES_HOSTNAME=postgres
-POSTGRES_USER=craftyourstartup
-POSTGRES_PASSWORD=craftyourstartup
-POSTGRES_DB=craftyourstartup
+POSTGRES_USER=delorme_os
+POSTGRES_PASSWORD=delorme_os
+POSTGRES_DB=delorme_os
 POSTGRES_PORT=54323
