--- a/staging.env.example
+++ b/staging.env.example
@@ -8,11 +8,11 @@ env=staging
 
 # Database (Auto-configured by Render)
 # These are automatically set by Render when you link the database
-# db_username - linked from database
+# db_username=delorme_os - linked from database
 # db_password - linked from database
 # db_host - linked from database
 # db_port - linked from database
-# db_database - linked from database
+# db_database=delorme_os - linked from database
 db_sslmode=require
 
 # Security (IMPORTANT: Generate secure values for production)
@@ -21,13 +21,13 @@ algorithm=HS256
 access_token_expire_minutes=10080
 
 # Application URLs (Update after deployment)
-domain=https://velocity-staging-frontend.onrender.com
-redirect_after_login=https://velocity-staging-frontend.onrender.com/dashboard
+domain=https://delorme-os-staging-frontend.onrender.com
+redirect_after_login=https://delorme-os-staging-frontend.onrender.com/dashboard
 
 # Google OAuth (Get from Google Cloud Console)
 google_oauth2_client_id=YOUR_GOOGLE_CLIENT_ID
 google_oauth2_secret=YOUR_GOOGLE_CLIENT_SECRET
-google_oauth2_redirect_uri=https://velocity-staging-backend.onrender.com/api/auth/google_callback
+google_oauth2_redirect_uri=https://delorme-os-staging-backend.onrender.com/api/auth/google_callback
 
 # Stripe Payments (Use TEST keys for staging)
 STRIPE_SECRET_KEY=sk_test_YOUR_TEST_KEY
@@ -42,9 +42,9 @@ STRIPE_PRICE_ENTERPRISE_SUB=price_test_placeholder
 
 # Email Configuration
 mailchimp_api_key=YOUR_MAILCHIMP_API_KEY
-from_email=noreply@yourdomain.com
-from_name=Velocity Staging
-support_email=support@yourdomain.com
+from_email=noreply@delorme.com
+from_name=Delorme OS Staging
+support_email=support@delorme.com
 
 # AI API Keys
 openai_api_key=sk-proj-YOUR_OPENAI_KEY
