--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "craftyourstartup"
+name = "delorme-os"
 version = "0.1.0"
-description = ""
-authors = ["YOUR_NAME <YOUR_EMAIL@example.com>"]
+description = "Delorme OS - Full-stack SaaS platform"
+authors = ["Delorme <admin@delorme.com>"]
 readme = "README.md"
 package-mode = false
 
